[package]
name = "engine2d"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"
glam = "0.27"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1.15", features = ["derive"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
